crates/wx-db/tests/snapshots/snapshot_parsing__snapshot_zstd_compressed.snap
---
source: crates/wx-db/tests/snapshot-parsing.rs
assertion_line: 161
expression: result.messages
---
- sort_seq: 500
  server_id: 900005
  local_id: 1
  msg_type: 49
  sub_type: 5
  sender: wxid_test_alice
  talker: wxid_test_bob
  create_time: 1700000500
  content:
    Link:
      sub_type: 5
      title: Test Article Link
      des: This is a test article description for snapshot testing
      url: "https://example.com/test-article"
      raw_xml: "<msg><appmsg><title>Test Article Link</title><des>This is a test article description for snapshot testing</des><url>https://example.com/test-article</url><type>5</type></appmsg></msg>\n"
  status: 0
